# S3-Native-Decoupled-Compute-OLAP-Query-Engine

./: .env  .env.example  .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: health.py  router.py  v1.py
backend/src/api/routes/: dashboard.py  datasets.py  queries.py  system.py
backend/src/core/: config.py  lifespan.py  logging.py
backend/src/database/: base.py  session.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 0cec13e06a67_add_query_runs_table.py  c158bd4a2558_create_datasets_table.py
backend/src/database/models/: __init__.py  dataset.py  query_run.py
backend/src/database/repositories/: dataset_repository.py  query_run_repository.py
backend/src/schemas/: __init__.py  dashboard.py  dataset.py  query.py  query_run.py  system.py
backend/src/services/: __init__.py  csv_analyzer.py  dashboard_service.py  dataset_service.py  query_engine.py  system_service.py
backend/src/storage/: __init__.py  base.py  factory.py  local_storage.py  s3_storage.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: LatestQueryRuns.tsx  MetricCard.tsx  StatusPill.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  DatasetsPage.tsx  PlaceholderPage.tsx  QueryConsolePage.tsx  SystemPage.tsx
frontend/src/services/: dashboardService.ts  datasetService.ts  (+2 more)
(+4 files in other folders)
