[project]
name = "s3-native-olap-engine"
version = "0.1.0"
description = "Cloud-native serverless OLAP query engine over Amazon S3 using DuckDB."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Mayank Verma", email = "mayankverma210405@gmail.com" }
]

dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.36",
    "duckdb>=1.5.4",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false
